<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.controlsfx</groupId>
  <artifactId>controlsfx</artifactId>
  <version>11.2.2-SNAPSHOT</version>
  <properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<javafx.version>21</javafx.version>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<maven.compiler.compilerVersion>17</maven.compiler.compilerVersion>
	</properties>
  <dependencies>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
		</dependency>

	  <dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-media</artifactId>
			<version>${javafx.version}</version>
		</dependency>
  </dependencies>
  <build>
		<plugins>
			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.13</version>
				<configuration>
					<compilerArgs>
			            <arg>--add-exports</arg>
			            <arg>javafx.controls/com.sun.javafx.scene.control.behavior=org.controlsfx.controls</arg>
			            <arg>--add-exports</arg>
			            <arg>javafx.controls/com.sun.javafx.scene.control=org.controlsfx.controls</arg>
			            <arg>--add-exports</arg>
			            <arg>javafx.base/com.sun.javafx.event=org.controlsfx.controls</arg>
			            <arg>--add-exports</arg>
			            <arg>javafx.base/com.sun.javafx.collections=org.controlsfx.controls</arg>
			            <arg>--add-exports</arg>
			            <arg>javafx.controls/com.sun.javafx.scene.control.behavior.TableViewBehavior=org.controlsfx.controls</arg>
			            <arg>--add-exports</arg>
			            <arg>javafx.base/com.sun.javafx.event.EventHandlerManager=org.controlsfx.controls</arg>
			        </compilerArgs>
				</configuration>
			</plugin>
	</plugins>
	</build>
</project>